<resources>
    <string name="app_name">ইত্তেহাদ</string>
    <string name="name">নাম</string>
    <string name="_01xxxxxxxxx">01XXXXXXXXX</string>
    <string name="address_">ঠিকানা:</string>
    <string name="village_">গ্রাম:</string>
    <string name="post_">পোস্ট:</string>
    <string name="thana_">থানা:</string>
    <string name="zilla_">জেলা:</string>
    <string name="asatijaye_keram">আসাতিযায়ে কেরাম</string>
    <string name="sonwari_jimmadar">সনওয়ারী জিম্মাদার</string>
    <string name="fujala_wa_abna">ফুজালা ওয়া আবনা</string>
    <string name="shura_and_committee">শুরা ও কমিটি</string>
    <string name="collect_information">তথ্য সংগ্রহ</string>
    <string name="elan">এলান</string>
    <string name="publication">প্রকাশনা</string>
    <string name="contact">যোগাযোগ</string>
    <string name="roll_no">ক্রমিক নং</string>
    <string name="faragoto_shon">ফারাগত সন</string>
    <string name="name_if_mistake_remains">নাম (কোন ভুল থাকলে)</string>
    <string name="fathers_name_if_mistake_remains">পিতার নাম (কোন ভুল থাকলে)</string>
    <string name="village_if_mistake_remains">গ্রামের নাম (কোন ভুল থাকলে)</string>
    <string name="post_office_if_mistake_remains">ডাকঘর (কোন ভুল থাকলে)</string>
    <string name="thana_if_mistake_remains">থানা (কোন ভুল থাকলে)</string>
    <string name="zilla_if_mistake_remains">জিলা (যদি কোন ভুল থেকে যায়)</string>
    <string name="mobile_no">মোবাইল নম্বর</string>
    <string name="advice">পরামর্শ দিন</string>
    <string name="submit">জমা দিন</string>
    <string name="home_page_message">সম্মানিত সদস্য! যে কোন সময় আপনার গুরুত্বপূর্ণ পরামর্শ/মতামত প্রদান বা কোন তথ্য জানার জন্য যোগাযোগ করে আমাদের কৃতার্থ করুন।\nমোবাইল: 01627989898, 01984643195\nইমেইল : fujalamadani@gmail.com</string>
</resources>