<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4dp"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginEnd="@dimen/_4dp"
            android:layout_marginBottom="@dimen/_8dp"
            android:elevation="@dimen/_4dp"
            app:cardBackgroundColor="@color/color_teal_5_0490A1"
            app:cardCornerRadius="@dimen/_4dp"
            app:cardElevation="@dimen/_4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardIndex"
                        android:layout_width="@dimen/_40dp"
                        android:layout_height="@dimen/_40dp"
                        app:cardCornerRadius="@dimen/_20dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tvIndex"
                            style="@style/TextStyleSFProMediumBlueGreyH7"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="1"
                            tools:ignore="HardcodedText" />

                    </androidx.cardview.widget.CardView>

                    <View
                        android:id="@+id/viewDivider"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1dp"
                        android:layout_marginStart="@dimen/_54dp"
                        android:layout_marginEnd="@dimen/_8dp"
                        android:background="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/cardIndex"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_54dp"
                        android:layout_marginEnd="@dimen/_8dp"
                        android:layout_marginBottom="@dimen/_6dp"
                        app:layout_constraintBottom_toTopOf="@+id/viewDivider"
                        app:layout_constraintEnd_toEndOf="parent">

                        <ImageView
                            android:id="@+id/ivCall"
                            android:layout_width="@dimen/_20dp"
                            android:layout_height="@dimen/_20dp"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/ic_call_circular"
                            app:tint="@color/white"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/tvName"
                            style="@style/TextStyleLexendWhiteH7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_4dp"
                            android:layout_toStartOf="@+id/ivCall"
                            android:text="@string/name" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_54dp"
                        android:layout_marginTop="@dimen/_6dp"
                        android:layout_marginEnd="@dimen/_8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/viewDivider">

                        <ImageView
                            android:id="@+id/ivMessage"
                            android:layout_width="@dimen/_20dp"
                            android:layout_height="@dimen/_20dp"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/ic_paper_plane"
                            app:tint="@color/white"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/tvContact"
                            style="@style/TextStyleLexendWhiteH8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_4dp"
                            android:layout_toStartOf="@+id/ivMessage"
                            android:text="@string/_01xxxxxxxxx" />

                    </RelativeLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <RelativeLayout
                    android:id="@+id/layoutAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:paddingStart="@dimen/_16dp"
                    android:paddingTop="@dimen/_6dp"
                    android:paddingEnd="@dimen/_10dp"
                    android:paddingBottom="@dimen/_8dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tvAddressIndex"
                        style="@style/TextStyleLexendBlueGreyH7"
                        android:layout_width="@dimen/_60dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginEnd="@dimen/_4dp"
                        android:text="@string/address_" />

                    <TextView
                        android:id="@+id/tvAddress"
                        style="@style/TextStyleLexendBlueGreyH7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginEnd="@dimen/_4dp"
                        android:layout_toEndOf="@+id/tvAddressIndex"
                        android:text="" />

                    <TextView
                        android:id="@+id/tvVillageIndex"
                        style="@style/TextStyleLexendBlueGreyH7"
                        android:layout_width="@dimen/_60dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvAddress"
                        android:layout_marginTop="@dimen/_4dp"
                        android:layout_marginEnd="@dimen/_4dp"
                        android:text="@string/village_" />

                    <TextView
                        android:id="@+id/tvVillage"
                        style="@style/TextStyleLexendBlueGreyH7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvAddress"
                        android:layout_marginTop="@dimen/_4dp"
                        android:layout_marginEnd="@dimen/_4dp"
                        android:layout_toEndOf="@+id/tvVillageIndex"
                        android:text="" />

                    <TextView
                        android:id="@+id/tvPostIndex"
                        style="@style/TextStyleLexendBlueGreyH7"
                        android:layout_width="@dimen/_60dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvVillage"
                        android:layout_marginTop="@dimen/_4dp"
                        android:layout_marginEnd="@dimen/_4dp"
                        android:text="@string/post_" />

                    <TextView
                        android:id="@+id/tvPost"
                        style="@style/TextStyleLexendBlueGreyH7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvVillage"
                        android:layout_marginTop="@dimen/_4dp"
                        android:layout_marginEnd="@dimen/_4dp"
                        android:layout_toEndOf="@+id/tvPostIndex"
                        android:text="" />

                    <TextView
                        android:id="@+id/tvThanaIndex"
                        style="@style/TextStyleLexendBlueGreyH7"
                        android:layout_width="@dimen/_60dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvPost"
                        android:layout_marginTop="@dimen/_4dp"
                        android:layout_marginEnd="@dimen/_4dp"
                        android:text="@string/thana_" />

                    <TextView
                        android:id="@+id/tvThana"
                        style="@style/TextStyleLexendBlueGreyH7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvPost"
                        android:layout_marginTop="@dimen/_4dp"
                        android:layout_marginEnd="@dimen/_4dp"
                        android:layout_toEndOf="@+id/tvThanaIndex"
                        android:text="" />

                    <TextView
                        android:id="@+id/tvZillaIndex"
                        style="@style/TextStyleLexendBlueGreyH7"
                        android:layout_width="@dimen/_60dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvThana"
                        android:layout_marginTop="@dimen/_4dp"
                        android:layout_marginEnd="@dimen/_4dp"
                        android:text="@string/zilla_" />

                    <TextView
                        android:id="@+id/tvZilla"
                        style="@style/TextStyleLexendBlueGreyH7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvThana"
                        android:layout_marginTop="@dimen/_4dp"
                        android:layout_marginEnd="@dimen/_4dp"
                        android:layout_toEndOf="@+id/tvThanaIndex"
                        android:text="" />

                </RelativeLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</layout>
